--- a/trunk/tp3/informe/Desarrollo5.tex
+++ b/trunk/tp3/informe/Desarrollo5.tex
@@ -118,12 +118,12 @@ A continuación se agrega un gráfico para evaluar los tiempos para distintos k 
 
 \begin{center}
 \includegraphics[width=15cm]{./graficos/GRASP_distintosK.png}\\
-Flia de grafo perteneciente al peor caso con n=10, n=50, n=100, n=200, n=500.
+Flia de grafo perteneciente al peor caso con n=10, n=50, n=100, n=200, n=500, con k < 50
 \end{center}
 
 \begin{center}
 \includegraphics[width=15cm]{./graficos/GRASP_distintosK.png}\\
-Flia de grafo perteneciente al mejor caso con n=10, n=50, n=100, n=200, n=500.
+Flia de grafo perteneciente al mejor caso con n=10, n=50, n=100, n=200, n=500, con k < 50
 \end{center}
 
 
