graficos bien puestos

--- a/tp3/informe/Desarrollo3.tex
+++ b/tp3/informe/Desarrollo3.tex
@@ -82,16 +82,16 @@ Las familias de grafos que encontramos que el algoritmo goloso da un resultado n
 
 Nos pareció más interesante hacer un análisis mas detallado sobre los grafos Grid.
 
-\begin {center}
-\includegraphics{./graficos/grid_5x5_goloso.png}
+
+\includegraphics[width=8cm]{./graficos/grid_5x5_goloso.png}
 % grafico.eps: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=50 50 410 302
-\includegraphics{./graficos/grid_5x5_exacto.png}
+\includegraphics[width=8cm]{./graficos/grid_5x5_exacto.png}
 % grafico.eps: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=50 50 410 302
-\end {center} 
 
 
+
 \begin {center}
-\includegraphics{./graficos/goloso-900nodos.png}
+\includegraphics[width=19cm]{./graficos/goloso-900nodos.png}
 % grafico.eps: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=50 50 410 302
 \end {center} 
 
@@ -101,12 +101,12 @@ Nos pareció más interesante hacer un análisis mas detallado sobre los grafos 
 En los gráficos que aparece a continuación  se puede notar que a medida que la cantidad de nodos aumenta, el algoritmo dibuja un comportamiento que se asemeja a O($n^3$) en relación a la cantidad de ciclos y el tiempo en nanosegundos.\\
 
 \begin {center}
-\includegraphics[width=8cm]{./graficos/goloso_1.png}
+\includegraphics[width=16cm]{./graficos/goloso_1.png}
 % grafico.eps: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=50 50 410 302
 \end {center} 
 
 \begin {center}
-\includegraphics[width=8cm]{./graficos/goloso_2.png}
+\includegraphics[width=16cm]{./graficos/goloso_2.png}
 % grafico.eps: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=50 50 410 302
 \end {center}
 
